yare-tests-ui/tests/fail/not_enough_arguments_2nd.stderr
error: case2: Expected 2 arguments, but 1 were given
 --> tests/fail/not_enough_arguments_2nd.rs:5:5
  |
5 |     case2 = { 0 },
  |     ^^^^^
